force-app/main/default/objects/sugati__Resource_Booking_Detail__c/sugati__Resource_Booking_Detail__c.object-meta.xml
<CustomObject>
    <label>Resource Booking Detail</label>
    <nameField>
        <displayFormat>RBD-{00000000}</displayFormat>
        <label>Resource Booking Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Booking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>