force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Configuration__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Configuration__c</fullName>
    <formula>sugati__S_RBD_Rate_Time_Slot__r.sugati__S_RTS_Resource_Configuration__r.sugati__S_RC_Configuration_Name__c</formula>
    <label>Configuration</label>
    <type>Text</type>
</CustomField>