force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Date__c</fullName>
    <formula>IF (ISBLANK(sugati__S_RBD_Rate_Time_Slot__c), sugati__S_RBD_Date_Manual__c, sugati__S_RBD_Date_From_Rate_Time_Slot__c)</formula>
    <label>Date</label>
    <type>Date</type>
</CustomField>