force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Date_From_Rate_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Date_From_Rate_Time_Slot__c</fullName>
    <description>The date from the linked Rate / Time Slot record</description>
    <formula>sugati__S_RBD_Rate_Time_Slot__r.sugati__S_RTS_Date__c</formula>
    <inlineHelpText>The date from the linked Rate / Time Slot record</inlineHelpText>
    <label>Date (From Rate / Time Slot)</label>
    <type>Date</type>
</CustomField>