force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Date_Manual__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Date_Manual__c</fullName>
    <description>The date this Resource Bookng Detail applies to when it is not linked to a rate.</description>
    <inlineHelpText>The date this Resource Bookng Detail applies to when it is not linked to a rate.</inlineHelpText>
    <label>Date (Manual)</label>
    <type>Date</type>
</CustomField>