force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Group_Member__c</fullName>
    <formula>sugati__S_RBD_Individual_Booking_Detail__r.sugati__S_IBD_Group_Member__r.sugati__GM_Name__c</formula>
    <label>Group Member Name</label>
    <type>Text</type>
</CustomField>