force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Indicative_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Indicative_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If we use a rate out of the travelling dates for indicative pricing, it is populated here.</description>
    <inlineHelpText>If we use a rate out of the travelling dates for indicative pricing, it is populated here.</inlineHelpText>
    <label>Indicative Rate</label>
    <referenceTo>sugati__RA_Rate__c</referenceTo>
    <relationshipLabel>Resource Booking Details (Indicative Rate)</relationshipLabel>
    <relationshipName>Resource_Booking_Details_Indicitive</relationshipName>
    <type>Lookup</type>
</CustomField>