force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Individual_Booking_Detail__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Individual_Booking_Detail__c</fullName>
    <label>Individual Booking Detail</label>
    <referenceTo>sugati__Individual_Booking_Detail__c</referenceTo>
    <relationshipLabel>Resource Booking Details</relationshipLabel>
    <relationshipName>Resource_Booking_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>