force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Meal_Basis__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Meal_Basis__c</fullName>
    <label>Meal Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Catering</fullName>
            </value>
            <value>
                <fullName>Bed &amp; Breakfast</fullName>
            </value>
            <value>
                <fullName>Half Board</fullName>
            </value>
            <value>
                <fullName>Full Board</fullName>
            </value>
            <value>
                <fullName>All Inclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>