force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Meal_Choice__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Meal_Choice__c</fullName>
    <label>Meal Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Gluten-free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>