force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Non_Rate_Resource__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Non_Rate_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Rate Resource</label>
    <referenceTo>sugati__Resource__c</referenceTo>
    <relationshipLabel>Resource Booking Details</relationshipLabel>
    <relationshipName>Resource_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>