force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Prospective_Rate_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Prospective_Rate_Time_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will hold a reference to the rate time slot while selecting resources. When Confirm is clicked, we move this reference into S_RBD_Rate_Time_Slot__c.</description>
    <label>Prospective Rate / Time Slot</label>
    <referenceTo>sugati__Rate_Time_Slot__c</referenceTo>
    <relationshipLabel>Resource Booking Details (Prospective Rate / Time Slot)</relationshipLabel>
    <relationshipName>Prospective_Resource_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>