force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the classic Rate object.</description>
    <label>Rate</label>
    <referenceTo>sugati__RA_Rate__c</referenceTo>
    <relationshipLabel>Resource Booking Details</relationshipLabel>
    <relationshipName>Resource_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>