force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Rate_Date_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Rate_Date_To__c</fullName>
    <formula>IF (
  ISBLANK(sugati__S_RBD_Rate__c), 
  DATE(2200, 1, 1), 
  IF (
    ISBLANK(sugati__S_RBD_Rate__r.sugati__RA_To_Date__c), 
    DATE(2200, 1, 1), 
    sugati__S_RBD_Rate__r.sugati__RA_To_Date__c
  )
)</formula>
    <label>Rate Date To</label>
    <type>Date</type>
</CustomField>