force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Rate_Dates_Valid__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Rate_Dates_Valid__c</fullName>
    <formula>AND(
  sugati__S_RBD_Rate_Date_From__c &lt;= sugati__S_RBD_Date__c, 
  sugati__S_RBD_Rate_Date_To__c &gt;= sugati__S_RBD_Date__c
)</formula>
    <label>Rate Dates Valid</label>
    <type>Checkbox</type>
</CustomField>