force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Rate_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Rate_Group_Number__c</fullName>
    <description>Used when going back to the rate tab so that we know which passengers are grouped up on a single rate instance.</description>
    <label>Rate Group Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>