force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Rate_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Rate_Time_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate / Time Slot</label>
    <referenceTo>sugati__Rate_Time_Slot__c</referenceTo>
    <relationshipLabel>Resource Booking Details</relationshipLabel>
    <relationshipName>Resource_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>