force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Reserved_Until__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Reserved_Until__c</fullName>
    <label>Reserved Until</label>
    <type>DateTime</type>
</CustomField>