force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Resource_Unit__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Resource_Unit__c</fullName>
    <formula>sugati__S_RBD_Rate_Time_Slot__r.sugati__S_RTS_Availability__r.sugati__S_A_Resource_Unit__r.Name</formula>
    <label>Resource Unit</label>
    <type>Text</type>
</CustomField>