force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Rooming_Preference__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Rooming_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping Preference</label>
    <referenceTo>sugati__Rooming_Preference__c</referenceTo>
    <relationshipLabel>Resource Booking Details</relationshipLabel>
    <relationshipName>Resource_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>