force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Booking_Status</valueSetName>
    </valueSet>
</CustomField>