force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Supplier__c</fullName>
    <formula>IF (
    NOT(ISBLANK(sugati__S_RBD_Rate_Time_Slot__r.sugati__S_RTS_Availability__r.sugati__S_A_Resource_Unit__c)), 
    sugati__S_RBD_Rate_Time_Slot__r.sugati__S_RTS_Availability__r.sugati__S_A_Resource_Unit__r.sugati__S_RU_Resource__r.sugati__S_R_Supplier__r.Name, 
    IF ( 
        NOT(ISBLANK(sugati__S_RBD_Rate_Time_Slot__r.sugati__S_RTS_Availability__r.sugati__S_A_Activity_Delivery__c)), 
        sugati__S_RBD_Rate_Time_Slot__r.sugati__S_RTS_Availability__r.sugati__S_A_Activity_Delivery__r.sugati__S_AD_Supplier__r.Name, 
        &apos;&apos;
    )
)</formula>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>