force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Supplier_Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Supplier_Booking_Id__c</fullName>
    <formula>CASESAFEID(sugati__S_RBD_Individual_Booking_Detail__r.sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__c)</formula>
    <label>Supplier Booking Id</label>
    <type>Text</type>
</CustomField>