force-app/main/default/objects/sugati__Resource_Booking_Detail__c/fields/sugati__S_RBD_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RBD_Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>